--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Upload binary to S3 bucket
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: --acl public-read --exclude '*' --include 'index.html'
+          args: --acl public-read --include '*'
         env:
           AWS_S3_BUCKET: ${{ secrets.BUCKET_NAME }}
 
